--- a/static/css/spaces.css
+++ b/static/css/spaces.css
@@ -7,6 +7,10 @@ html, body {
   font-family: -apple-system, BlinkMacSystemFont, Arial ,'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+canvas {
+  width: 100%;
+  height: 100%;
+}
 #space-ctr {
   min-width: 456px;
   width: 100%;
